<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ProductAssignment</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_detailed_product">DetailedProductActivity</string>
    <string name="create_product">Create Product</string>
    <string name="show_product">Show Product</string>
    <string name="update_product">Update Product</string>
    <string name="delete_product">Delete Product</string>
    <string name="name">Name*:</string>
    <string name="fields">Fields*:</string>
    <string name="thumbnail">thumbnail</string>
    <string name="image_url">Image URL:</string>
    <string name="image_url_example">http://example.com/example.jpg</string>
    <string name="regular">Regular Price:</string>
    <string name="sales">Sale Price:</string>
    <string name="colors">Colors:</string>
    <string name="stores">Stores:</string>
    <string name="description">Description:</string>
    <string name="description_example">Discription ..........</string>
    <string name="required">Max. 20 chracters</string>
    <string name="optional">Option</string>
    <string name="regular_price">Reg. Price($):</string>
    <string name="regular_example">e.g. 100 or 100.50</string>
    <string name="sale_price">Sale Price($):</string>
    <string name="sale_example">e.g. 150 or 150.50</string>
    <string name="colors_example">e.g. white, Black</string>
    <string name="stores_example">e.g. walmart, Kmart</string>
</resources>
