<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
       android:id="@+id/scrollView1"
       android:layout_width="match_parent"
       android:layout_height="wrap_content" > 

<LinearLayout 
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin10dp"
    android:orientation="vertical" 
    android:divider="@drawable/divider"
    android:showDividers="middle"
    android:dividerPadding="1dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin5dp"
        android:gravity="center"
        android:text="@string/create_product" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin5dp"
        android:layout_marginTop="@dimen/margin5dp" >

        <TextView
            android:id="@+id/fields"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fields"/>

        <EditText
            android:id="@+id/fieldsEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:maxLength="20"
            android:textSize="14sp"
            android:singleLine="true"
            android:hint="@string/required">

            <requestFocus />
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin5dp"
        android:layout_marginTop="@dimen/margin5dp" >

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name" />

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:maxLength="20"
            android:textSize="14sp"
            android:singleLine="true"
            android:hint="@string/required">

        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin5dp"
        android:layout_marginTop="@dimen/margin5dp" >

        <TextView
            android:id="@+id/regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/regular_price" />

        <EditText
            android:id="@+id/regularEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/regular_example"
            android:inputType="numberDecimal"
            android:singleLine="true"
            android:textSize="14sp" >

        </EditText>

    </LinearLayout>    

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin5dp"
        android:layout_marginTop="@dimen/margin5dp" >

        <TextView
            android:id="@+id/sale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sale_price" />

        <EditText
            android:id="@+id/saleEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/sale_example"
            android:inputType="numberDecimal"
            android:singleLine="true"
            android:textSize="14sp" >

        </EditText>

    </LinearLayout>    

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin5dp"
        android:layout_marginTop="@dimen/margin5dp" >        

        <TextView
            android:id="@+id/color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colors" />

        <EditText
            android:id="@+id/colorEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/colors_example"
            android:maxLength="20"
            android:textSize="14sp" >

        </EditText>

    </LinearLayout>    
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin5dp"
        android:layout_marginTop="@dimen/margin5dp" >        

        <TextView
            android:id="@+id/store"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stores" />

        <EditText
            android:id="@+id/storeEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/stores_example"
            android:maxLength="20"
            android:textSize="14sp" >

        </EditText>

    </LinearLayout>     

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin5dp"
        android:layout_marginTop="@dimen/margin5dp" 
        android:orientation="vertical">        

        <TextView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/image_url" />

        <EditText
            android:id="@+id/imageEditText"
            android:layout_width="match_parent"
	        android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/image_url_example"
            android:textSize="14sp" >

        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin5dp"
        android:layout_marginTop="@dimen/margin5dp"
        android:orientation="vertical" >

	    <TextView
	        android:id="@+id/description"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/description" />

	    <EditText
	        android:id="@+id/descriptionEditText"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/description_example"
	        android:textSize="14sp" />

    </LinearLayout>
   
</LinearLayout>
</ScrollView>